--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Professional Web Designs and Development">
+    <meta name="keywords" content="web, web development, website, websites, web design, html, css, js, webpage, developer">
+    <meta name="author" content="Joe DeSoto">
     <title>Websites by Joe DeSoto</title>
     <!-- Bootstrap CDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
