Adds email subscribe form, images in body, some bootstrap styling on subscribe button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,65 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>Welcome to Website Solutions!</h1>
+    <header>
+      <div class="container">
+        <div id="branding" class="">
+          <h1>Welcome to Website Solutions!</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <section id="body-content">
+      <div class="container">
+        <h1>Affordable, Professional Web Design and Development</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </section>
+
+    <section id="newsletter">
+      <div class="container">
+        <h1>Subscribe to My Newsletter for All Updates</h1>
+        <form class="" action="index.html" method="post">
+          <div class="row">
+            <div class="col-xs-4">
+              <input type="email" placeholder="email@email.com" name="" value="" required size="46">
+              <br><br>
+              <button type="submit" class="btn btn-primary btn-sm btn-block" name="button">Subscribe</button>
+            </div>
+          </div>
+          <br><br>
+        </form>
+      </div>
+    </section>
+
+    <section id="boxes">
+      <div class="container">
+        <div class="box">
+          <h3>HTML 5 Markup</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <img src="img/html5-img.jpg" alt="HTML 5">
+        </div>
+
+        <div class="box">
+          <h3>CSS 3 Styling</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <img src="img/css3.jpg" alt="CSS 3">
+        </div>
+
+        <div class="box">
+          <h3>Bootstrap Styling</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <img src="img/tb.png" alt="Twitter Bootstrap">
+        </div>
+      </div>
+    </section>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
