Finishes main html in body

--- a/index.html
+++ b/index.html
@@ -53,24 +53,30 @@
     <section id="boxes">
       <div class="container">
         <div class="box">
+          <img src="img/html5-img.jpg" alt="HTML 5">
           <h3>HTML 5 Markup</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <img src="img/html5-img.jpg" alt="HTML 5">
         </div>
 
         <div class="box">
+          <img src="img/css3.jpg" alt="CSS 3">
           <h3>CSS 3 Styling</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <img src="img/css3.jpg" alt="CSS 3">
         </div>
 
         <div class="box">
+          <img src="img/tb.png" alt="Twitter Bootstrap">
           <h3>Bootstrap Styling</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <img src="img/tb.png" alt="Twitter Bootstrap">
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container">
+        <p>Web Design and Development, Joe DeSoto. Copyright &copy; 2017</p>
+      </div>
+    </footer>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
