--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="box">
           <img src="img/css3.jpg" alt="CSS 3">
-          <h3>CSS 3 Styling</h3>
+          <h3>CSS 3 Designs</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
 
