Styles newsletter section

--- a/index.html
+++ b/index.html
@@ -36,15 +36,10 @@
 
     <section id="newsletter">
       <div class="container">
-        <h1>Subscribe to My Newsletter for All Updates</h1>
-        <form class="" action="index.html" method="post">
-          <div class="row">
-            <div class="col-xs-4">
-              <input type="email" placeholder="email@email.com" name="" value="" required size="46">
-              <br><br>
-              <button type="submit" class="btn btn-primary btn-sm btn-block" name="button">Subscribe</button>
-            </div>
-          </div>
+        <h2>Subscribe to the Newsletter!</h2>
+        <form action="index.html" method="post">
+          <input type="email" placeholder="email@email.com" required>
+          <button type="submit" class="subscribe_button" name="button">Subscribe</button>
           <br><br>
         </form>
       </div>
