--- a/services.html
+++ b/services.html
@@ -22,6 +22,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="current"><a href="services.html">Services</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
           </ul>
         </nav>
       </div>
