adds bootstrap classes to about page header and newsletter section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
               </ul>
             </nav>
-          </div>
+          </div> <!-- closes second col-xs-6 div -->
         </div> <!-- closes row div -->
       </div> <!-- closes container div -->
     </header>
