--- a/projects.html
+++ b/projects.html
@@ -40,9 +40,13 @@
     </header>
 
     <!-- Add section above the project -->
-    <section id="newsletter">
+    <section class="newsletter-projects">
       <div class="container">
-        <h2>Image Slider. Move the mouse to change images!</h2>
+        <div class="row">
+          <div class="col-xs-12">
+            <h2>Image Slider. Move the mouse to change images!</h2>
+          </div>
+        </div>
       </div>
     </section>
 
