--- a/about.html
+++ b/about.html
@@ -35,18 +35,24 @@
               </ul>
             </nav>
           </div>
-        </div> <!-- closes row div -->
-      </div> <!-- closes container div -->
+        </div>
+      </div>
     </header>
 
-    <section id="newsletter">
+    <section id="newsletter" class="newsletter-about">
       <div class="container">
-        <h2>Subscribe to the Newsletter!</h2>
-        <form action="index.html" method="post">
-          <input type="email" placeholder="email@email.com" required>
-          <button type="submit" class="subscribe_button" name="button">Subscribe</button>
-          <br><br>
-        </form>
+        <div class="row">
+          <div class="col-xs-6 text-center">
+            <h2>Subscribe to the Newsletter!</h2>
+          </div>
+          <div class="col-xs-6">
+            <form action="index.html" method="post">
+              <input type="email" placeholder="email@email.com" required>
+              <button type="submit" class="subscribe_button" name="button">Subscribe</button>
+              <br><br>
+            </form>
+          </div>
+        </div>
       </div>
     </section>
 
