converted all newsletter sections to bootstrap, all sections maintain responsiveness

--- a/index.html
+++ b/index.html
@@ -46,14 +46,20 @@
       </div>
     </section>
 
-    <section id="newsletter">
+    <section id="newsletter" class="index-newsletter">
       <div class="container">
-        <h2>Subscribe to the Newsletter!</h2>
-        <form action="index.html" method="post">
-          <input type="email" placeholder="email@email.com" required>
-          <button type="submit" class="subscribe_button" name="button">Subscribe</button>
-          <br><br>
-        </form>
+        <div class="row">
+          <div class="col-xs-6 text-center">
+            <h2>Subscribe to the Newsletter!</h2>
+          </div>
+          <div class="col-xs-6 text-center">
+            <form action="index.html" method="post">
+              <input type="email" placeholder="email@email.com" required>
+              <button type="submit" class="subscribe_button" name="button">Subscribe</button>
+              <br><br>
+            </form>
+          </div>
+        </div>
       </div>
     </section>
 
