--- a/about.html
+++ b/about.html
@@ -39,13 +39,13 @@
       </div>
     </header>
 
-    <section id="newsletter" class="newsletter-about">
+    <section id="newsletter">
       <div class="container">
         <div class="row">
           <div class="col-xs-6 text-center">
             <h2>Subscribe to the Newsletter!</h2>
           </div>
-          <div class="col-xs-6">
+          <div class="col-xs-6 text-center">
             <form action="index.html" method="post">
               <input type="email" placeholder="email@email.com" required>
               <button type="submit" class="subscribe_button" name="button">Subscribe</button>
