--- a/projects.html
+++ b/projects.html
@@ -39,11 +39,11 @@
       </div> <!-- closes container div -->
     </header>
 
-    <!-- Add section above the project -->
-    <section class="newsletter-projects">
+    <!-- Add section above the project. Use projects-description class to help with styling, as this section on this page is different than the other pages -->
+    <section id="newsletter" class="projects-description">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 text-center">
             <h2>Image Slider. Move the mouse to change images!</h2>
           </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="content-wrap">
           <div class="content-body">
             <h1>Railroad</h1>
-            <p>While not as vital to passengers, rail transportation still moves millions of people per year and also transports significant amounts of cargo throughout the United States. </p>
+            <p class="img-text">While not as vital to passengers, rail transportation still moves millions of people per year and also transports significant amounts of cargo throughout the United States. </p>
           </div> <!--ends content body-->
           <img src="img/rr.jpg" alt="Rail Bridge">
         </div> <!--ends content wrap-->
@@ -67,7 +67,7 @@
         <div class="content-wrap">
           <div class="content-body">
             <h1>Coffee</h1>
-            <p>An integral part of American's lives, this drink took hold when need for an alternative beverage arose during the Boston Tea Party.</p>
+            <p class="img-text">An integral part of American's lives, this drink took hold when need for an alternative beverage arose during the Boston Tea Party.</p>
           </div> <!--ends content body-->
           <img src="img/coffee.jpg" alt="Coffee Image">
         </div> <!--ends content wrap-->
