--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,16 @@
     <meta name="description" content="Professional Web Designs and Development">
     <meta name="keywords" content="web, web development, website, websites, web design, html, css, js, webpage, developer">
     <meta name="author" content="Joe DeSoto">
-    <title>Websites by Joe DeSoto</title>
+    <title>Projects Page</title>
     <!-- Bootstrap CDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Favicon links and meta tags -->
+    <link rel="icon" href="myicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <header>
