more newsletter responsive fixes

--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
 
     <section id="body-content">
       <div class="container">
-        <h1>Affordable, Professional Web Design and Development</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="row">
+          <div class="col-xs-12 text-center">
+            <h1>Affordable, Professional Web Design and Development</h1>
+            <p>Website Solutions offers web development to anyone needing a website. From wireframing to the finished product, we offer clean, modern website designs without the expensive price.</p>
+          </div>
+        </div>
       </div>
     </section>
 
