--- a/index.html
+++ b/index.html
@@ -72,25 +72,30 @@
         </div>
       </div>
     </section>
-
+    <!-- TODO: Make each h3 in this section a link to the original image that pops up in a modal -->
     <section id="boxes">
       <div class="container">
         <div class="box">
-          <img src="img/html5-img.jpg" alt="HTML 5">
-          <h3>HTML 5</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
+          <div class="row">
+            <div class="col-xs-4 text-center">
+              <a href="#"><img src="img/html5-img.jpg" alt="HTML 5"></a>
+              <h3>HTML 5</h3>
+            </div>
 
-        <div class="box">
-          <img src="img/css3.jpg" alt="CSS 3">
-          <h3>CSS 3 Designs</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
+            <div class="box">
+              <div class="col-xs-4 text-center">
+                <a href="#"><img src="img/css3.jpg" alt="CSS 3"></a>
+                <h3>CSS 3 Designs</h3>
+              </div>
+            </div>
 
-        <div class="box">
-          <img src="img/tb.png" alt="Twitter Bootstrap">
-          <h3>Bootstrap Styling</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="box">
+              <div class="col-xs-4 text-center">
+                <a href="#"><img src="img/tb.png" alt="Twitter Bootstrap"></a>
+                <h3>Bootstrap 3 Styling</h3>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
