adjusted jquery for all pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
-  <body>
+  <body class="index">
     <header>
       <div class="container">
         <div id="branding" class="row">
@@ -27,7 +27,7 @@
           <div class="col-xs-6">
             <nav>
               <!-- div to hold the menu bars -->
-              <div class="menu-container" onclick="menuCollapse(this)">
+              <div class="menu-container">
                 <!-- set up the three menu bars -->
                 <div class="b1"></div>
                 <div class="b2"></div>
@@ -78,8 +78,8 @@
         <div class="box">
           <div class="row">
             <div class="col-xs-4 text-center">
-              <img id="myImg" src="img/html5-img.jpg" alt="HTML 5">
-              <h3>HTML 5</h3>
+              <img class="myImg" src="img/html5-img.jpg" alt="HTML 5">
+              <h3 class="itemdesc">HTML 5</h3>
               <!-- The Modal -->
               <div id="myModal" class="modal">
 
@@ -96,15 +96,15 @@
 
             <div class="box">
               <div class="col-xs-4 text-center">
-                <img id="" src="img/css3.jpg" alt="CSS 3">
-                <h3>CSS 3 Designs</h3>
+                <img id="" class="myImg" src="img/css3.jpg" alt="CSS 3">
+                <h3 class="itemdesc">CSS 3 Designs</h3>
               </div>
             </div>
 
             <div class="box">
               <div class="col-xs-4 text-center">
-                <img id="" src="img/tb.png" alt="Twitter Bootstrap">
-                <h3>Bootstrap 3 Styling</h3>
+                <img id="" class="myImg" src="img/tb.png" alt="Twitter Bootstrap">
+                <h3 class="itemdesc">Bootstrap 3 Styling</h3>
               </div>
             </div>
           </div>
