--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
-  <body>
+  <body class="projects">
     <header>
       <div class="container">
         <div id="branding" class="row">
@@ -27,7 +27,7 @@
           <div class="col-xs-6">
             <nav>
               <!-- div to hold the menu bars -->
-              <div class="menu-container" onclick="menuCollapse(this)">
+              <div class="menu-container">
                 <!-- set up the three menu bars -->
                 <div class="b1"></div>
                 <div class="b2"></div>
