--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
 
                 <!-- Modal Content (The Image) -->
-                <img class="modal-content" id="img01">
+                <img class="modal-content" id="img01" src="">
 
                 <!-- Modal Caption (Image Text) -->
                 <div id="caption"></div>
