adds fs6 follow button in footer, adjusts button styling

--- a/home.html
+++ b/home.html
@@ -114,7 +114,11 @@
 
     <footer>
       <div class="container">
-        <p>Web Design and Development, Joe DeSoto. Copyright &copy; 2017</p>
+        <div class="row">
+          <div class="col-xs-12">
+            Web Design and Development, Joe DeSoto. Copyright &copy; 2017 <a class = "footer_link" href="https://www.f6s.com/joedesoto?follow=1" target="_blank" title="Follow Joe DeSoto on F6S"><img class="footer_img" src="https://www.f6s.com/images/f6s-follow-white.png" alt="Follow Joe DeSoto on F6S" /></a>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- jQuery CDN -->
