adds follow button to all footers

--- a/projects.html
+++ b/projects.html
@@ -85,9 +85,14 @@
 
     <footer>
       <div class="container">
-        <p>Web Design and Development, Joe DeSoto. Copyright &copy; 2017</p>
+        <div class="row">
+          <div class="col-xs-12">
+            Web Design and Development, Joe DeSoto. Copyright &copy; 2017 <a class = "footer_link" href="https://www.f6s.com/joedesoto?follow=1" target="_blank" title="Follow Joe DeSoto on F6S"><img class="footer_img" src="https://www.f6s.com/images/f6s-follow-white.png" alt="Follow Joe DeSoto on F6S" /></a>
+          </div>
+        </div>
       </div>
     </footer>
+    
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
