--- a/services.html
+++ b/services.html
@@ -6,9 +6,11 @@
     <meta name="description" content="Professional Web Designs and Development">
     <meta name="keywords" content="web, web development, website, websites, web design, html, css, js, webpage, developer">
     <meta name="author" content="Joe DeSoto">
-    <title>Services Provided</title>
+    <!-- webpage tab text -->
+    <title>Websites by Joe DeSoto</title>
     <!-- Bootstrap CDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- css file link -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Favicon links and meta tags -->
     <link rel="icon" href="myicon.ico" type="image/x-icon" />
@@ -118,9 +120,12 @@
         </div>
       </div>
     </footer>
-    
+
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <!-- bootstrap js script file CDN -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- custom js file -->
     <script src="js/main.js"></script>
   </body>
 </html>
