--- a/home.html
+++ b/home.html
@@ -79,17 +79,17 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-4 text-center">
-            <img class="myImg" id="1" data-toggle="modal" data-target="#myModal" src="img/html5-img.jpg" alt="HTML 5">
+            <img class="myImg" data-toggle="modal" data-target="#myModal" src="img/html5-img.jpg" alt="HTML 5">
             <h3 class="itemdesc">HTML 5</h3>
           </div> <!-- closes col-xs-4 text center div -->
 
           <div class="col-xs-4 text-center">
-            <img class="myImg" id="2" data-toggle="modal" data-target="#myModal" src="img/css3.jpg" alt="CSS 3">
+            <img class="myImg" data-toggle="modal" data-target="#myModal" src="img/css3.jpg" alt="CSS 3">
             <h3 class="itemdesc">CSS 3 Designs</h3>
           </div> <!-- closes col-xs-4 text center div -->
 
           <div class="col-xs-4 text-center">
-            <img class="myImg" id="3" data-toggle="modal" data-target="#myModal" src="img/tb.png" alt="Twitter Bootstrap">
+            <img class="myImg" data-toggle="modal" data-target="#myModal" src="img/tb.png" alt="Twitter Bootstrap">
             <h3 class="itemdesc">Bootstrap 3</h3>
           </div> <!-- closes col-xs-4 text center div -->
         </div> <!-- closes row div -->
