adds a rails 5 image to the home page. modal for this works as well

--- a/home.html
+++ b/home.html
@@ -78,20 +78,25 @@
     <section id="boxes">
       <div class="container">
         <div class="row">
-          <div class="col-xs-4 text-center">
+          <div class="col-xs-3 text-center">
             <img class="myImg" data-toggle="modal" data-target="#myModal" src="img/html5-img.jpg" alt="HTML 5">
             <h3 class="itemdesc">HTML 5</h3>
-          </div> <!-- closes col-xs-4 text center div -->
+          </div> <!-- closes col-xs- text center div -->
 
-          <div class="col-xs-4 text-center">
+          <div class="col-xs-3 text-center">
             <img class="myImg" data-toggle="modal" data-target="#myModal" src="img/css3.jpg" alt="CSS 3">
             <h3 class="itemdesc">CSS 3 Designs</h3>
-          </div> <!-- closes col-xs-4 text center div -->
+          </div> <!-- closes col-xs- text center div -->
 
-          <div class="col-xs-4 text-center">
+          <div class="col-xs-3 text-center">
             <img class="myImg" data-toggle="modal" data-target="#myModal" src="img/tb.png" alt="Twitter Bootstrap">
             <h3 class="itemdesc">Bootstrap 3</h3>
-          </div> <!-- closes col-xs-4 text center div -->
+          </div> <!-- closes col-xs- text center div -->
+
+          <div class="col-xs-3 text-center">
+            <img class="myImg" data-toggle="modal" data-target="#myModal" src="img/rails-5.jpg" alt="Rails 5">
+            <h3 class="itemdesc">Rails 5</h3>
+          </div> <!-- closes col-xs- text center div -->
         </div> <!-- closes row div -->
       </div> <!-- closes container div -->
     </section>
