hotfix for media query images

--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
         </div>
       </div>
     </section>
-    <!-- TODO: Make each h3 in this section a link to the original image that pops up in a modal -->
+
     <section id="boxes">
       <div class="container">
         <div class="row">
@@ -85,7 +85,7 @@
 
           <div class="col-xs-3 text-center">
             <img class="myImg" data-toggle="modal" data-target="#myModal" src="img/css3.jpg" alt="CSS 3">
-            <h3 class="itemdesc">CSS 3 Designs</h3>
+            <h3 class="itemdesc">CSS 3</h3>
           </div> <!-- closes col-xs- text center div -->
 
           <div class="col-xs-3 text-center">
