--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="web, web development, website, websites, web design, html, css, js, webpage, developer">
     <meta name="author" content="Joe DeSoto">
     <!-- webpage tab text -->
-    <title>Websites by Joe DeSoto</title>
+    <title>About</title>
     <!-- Bootstrap CDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- css file link -->
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> <!-- ends newsletter section -->
 
     <section id="main">
       <div class="container">
@@ -73,7 +73,7 @@
           <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
 
-        <!-- page sidebar -->
+        <!-- about me section sidebar -->
         <aside id="sidebar">
           <div class="dark">
             <h3 class="sidebar-title">What We Do</h3>
@@ -81,7 +81,7 @@
           </div>
         </aside>
       </div>
-    </section>
+    </section> <!-- ends main section -->
 
     <footer>
       <div class="container">
