many changes and bug fixes

--- a/projects.html
+++ b/projects.html
@@ -67,16 +67,6 @@
     <section id="main">
       <div class="container">
         <article id="main-col">
-          <section id="newsletter" class="projects-description">
-            <div class="container">
-              <div class="row">
-                <div class="col-xs-12 text-center">
-                  <h2>Move the mouse to switch images and text</h2>
-                </div>
-              </div>
-            </div>
-          </section> <!-- ends projects-description section -->
-
           <section id="wrapper" class="skewed">
             <!-- Top layer and image -->
             <div class="layer bottom">
@@ -102,24 +92,28 @@
             <!-- skew line that divides the images -->
             <div class="handle"></div>
           </section> <!-- ends wrapper section -->
-        </article>
+        </article> <!-- ends #main-col article -->
 
         <!-- image slider section sidebar -->
         <aside id="sidebar">
           <div class="dark">
             <h3 class="sidebar-title">Image Slider Description</h3>
-            <p>The image "slider" is written in vanilla JavaScript and CSS. It works by separating the two images and their corresponding description text into different layers, one on top and one on bottom. When the mouse is moving over an image, it is slowly concealing one layer over another, and back again when the mouse is moved in the opposite direction.</p>
+            <p>The image "slider" is written in core JavaScript and CSS. It works by separating the two images and their corresponding description text into different layers, one on top and one on bottom. When the mouse is moving over an image, it is slowly concealing one layer over another, and back again when the mouse is moved in the opposite direction.</p>
           </div>
         </aside>
       </div>
     </section> <!-- ends main section -->
 
-    <hr class="project_separation">
+    <!-- note, project_separation commented out as of 6/9/2018, because different projects can be given their own static page via dropdown -->
+    <!-- <hr class="project_separation"> -->
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12">
-            Web Design and Development, Joe DeSoto. Copyright &copy; 2017 <a class = "footer_link" href="https://www.f6s.com/joedesoto?follow=1" target="_blank" title="Follow Joe DeSoto on F6S"><img class="footer_img" src="https://www.f6s.com/images/f6s-follow-white.png" alt="Follow Joe DeSoto on F6S" /></a>
+          <div class="col-xs-8">
+            Web Design and Development, Joe DeSoto. Copyright &copy; 2017 <a class = "footer_link" href="https://www.f6s.com/joedesoto?follow=1" target="_blank" title="Follow Joe DeSoto on F6S">
+          </div>
+          <div class="col-xs-4">
+            <img class="footer_img" src="https://www.f6s.com/images/f6s-follow-white.png" alt="Follow Joe DeSoto on F6S" /></a>
           </div>
         </div>
       </div>
