--- a/services.html
+++ b/services.html
@@ -85,6 +85,7 @@
         </article>
 
         <!-- services page sidebar -->
+        <h1 class="contact_us">Contact Us</h1>
           <aside id="sidebar">
             <div class="services-dark">
               <h3 class="sidebar-quote-title">Get A Quote</h3>
